# taiyang

./: Cargo.toml  deploy.ps1  deploy.sh  package.ps1
shared/: Cargo.toml
shared/src/: engine.rs  lib.rs  midi.rs
src/: editor.rs  engine.rs  lib.rs  midi.rs  params.rs
taiyang/: Cargo.toml
taiyang/src/: editor.rs  lib.rs  params.rs
taiyang16/: Cargo.toml
taiyang16/src/: editor.rs  lib.rs  params.rs
