[package]
name = "taiyang16"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
taiyang-shared = { path = "../shared" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149e", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149e" }
parking_lot = "0.12.5"
rfd = "0.17.2"
